src/main/java/org/example/playground/error/exception/InvalidTicketException.java
package org.example.playground.error.exception;

public class InvalidTicketException extends RuntimeException {
    public InvalidTicketException(String message) {
        super(message);
    }
}
